[package]
name = "yew_form"
version = "0.1.2"
authors = ["J-F Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2018"
description = "Bringing MVC to Yew! A set of Yew component to map and validate a model to a HTML form"
license = "MIT"
repository = "https://github.com/jfbilodeau/yew_form"
readme = "README.md"
categories = [ "web-programming" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
stdweb = "0.4.20"
validator = "0.10.0"
validator_derive = "0.10.0"
yew = "0.12.0"
