[package]
name = "yew_form"
version = "0.1.7"
authors = ["J-F Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2018"
description = "Bringing MVC to Yew! A set mildly opinionated Yew component to map and validate a model to a HTML form"
license = "MIT"
repository = "https://github.com/jfbilodeau/yew_form"
readme = "../README.md"
categories = [ "web-programming" ]

[dependencies]
validator = "0.14.0"
validator_derive = "0.14.0"
yew = "0.18"
