[package]
name = "form"
version = "0.1.8"
authors = ["J-F Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4"
regex = "1"
validator = "0.14"
validator_derive = "0.14"
wasm-bindgen = "0.2"
yew = "0.18"
yew_form =  { version = "0.1", path = "../../yew_form"}
yew_form_derive =  { version = "0.1", path = "../../yew_form_derive"}

