[package]
name = "form"
version = "0.1.8"
authors = ["J-F Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
regex = "1"
validator = "0.14.0"
validator_derive = "0.14.0"
wasm-bindgen = "0.2"
yew = "0.19.3"
yew_form =  { path = "../../yew_form"}
yew_form_derive =  { path = "../../yew_form_derive"}
